update: appointment